--- a/samples/cs/Chatty/Properties/Resources.resx
+++ b/samples/cs/Chatty/Properties/Resources.resx
@@ -117,4 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Prompt_RequestChatSummary" xml:space="preserve">
+    <value>Please write a Summary of this conversation. The Summary should not have more than 4000 characters, but it can have (even much) less characters, if it makes sense. </value>
+  </data>
+  <data name="Prompt_RequestConversationTitle" xml:space="preserve">
+    <value>Please provide a title for the following conversation.</value>
+  </data>
+  <data name="Prompt_RequestKeywords" xml:space="preserve">
+    <value>Please provide {0} keywords for the following conversation. 
+Try to find the keywords in such a way that they become increasingly specific/concrete from original rather generalized.</value>
+  </data>
+  <data name="SystemPrompt_MetaInfo" xml:space="preserve">
+    <value>Today is {0}. It is {1}. 
+You are an assistant in an LLM Chat-Bot client software. 
+You're purpose is to provide certain meta information during a typical LLM chat with a user, like:
+
+* Writing chat summaries
+* Finding titles for chat topics
+* Finding short description for provided code snippets in technical discussions about software development.
+* Providing keywords for chat conversations.
+</value>
+  </data>
 </root>
