--- a/samples/cs/Chatty/Views/ChatView/ChatView.resx
+++ b/samples/cs/Chatty/Views/ChatView/ChatView.resx
@@ -124,7 +124,7 @@
   <data name="_newPrompt.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAACPSURBVFhH7c4xCsAgEARAn5A3WevXEwv/YdLYGlJocQjK
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAACPSURBVFhH7c4xCsAgEARAn5A3WevXEwv/YdLYGlJocQjK
         7VkYbmHBQvbGGJKccxFoSCkddHsqnTFueYg6YK1l1XtfYox8BAqAERRwp2eq9b9zDkOggOsMGAIFfG8I
         IQGAEFKAEYLebZEE9BB1n95tQQGj/hcwqgIUoAAFKEABCtgXIN19AKtL77bQj6ta77023lcd7+HzIAAA
         AABJRU5ErkJggg==
@@ -133,7 +133,7 @@
   <data name="_tsbRefreshMetaData.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAILSURBVFhHvZa/SgNBEMbzBOITiC8g+Ag+gIVgq2BnYWWr
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAILSURBVFhHvZa/SgNBEMbzBOITiC8g+Ag+gIVgq2BnYWWr
         TSws7LSMWCgIaiGkkmgRggHFwj+IEAiSaIoETEjOeLtbrnxn5tzs7eYu4e4GPhJyOzO/m/32LplMxHBd
         d9513VKv15vWryUeQog1zrnDOZf9fv8DMPqaxGLQXEKFx7r3CZhUINTmK/tFmVk+krnrt/QgGGPHBDC3
         eekBJAohhFjQxTl/QbNWx0kOgjGWJZONUiIQg+aBZjCcSRflqpxaPTFCwDN6/dBQ7xx3uHFY9otHlQIh
@@ -148,7 +148,7 @@
   <data name="_tsbSaveConversation.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAC5SURBVFhH7ZexDcIwEEVvRCTabMISDEBBwRz0bMEGgKVz
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAC5SURBVFhH7ZexDcIwEEVvRCTabMISDEBBwRz0bMEGgKVz
         m+gigsRzHCsSMYl0xavu6/+XwkVERERVdyGEe4yxrYFt2aZt9+MM1KKXGL78cLm1sj9VwbZs07ZlsGFo
         aT67LpATeD5eP4X9LuACLrB+gaVxARfYjgCf01zY5wLbFyjdCfPrFWiO1yQ0NlC6E+YTAVU9T0mUCnkn
         zCcC79+zrESpkHfC/KjAlESpkHfCfFaAErX4EviHRAcu5pVEM6Pl6wAAAABJRU5ErkJggg==
@@ -157,7 +157,7 @@
   <data name="_tsbCut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAJTSURBVFhHxVY7bsJAEOUIOUKOkCNE9EiU9PSImoqG3geg
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAJTSURBVFhHxVY7bsJAEOUIOUKOkCNE9EiU9PSImoqG3geg
         SBsqxAFQWtp86BLSU0CQd106epafNR7vB5uCJ41k2HlvZ8az4+31IjDGvFhrcxie9bpGW/8gpBgty7JH
         7UdgTft3DsIYM4XA8XjMx+NxvtlsooIMGL7ggFtypto3CmvtGeQkSfJ+v5+PRqNgFWT28AUHXPy+XC6/
         2j8IKTYYDAoxWKgKMnv6g0sd7R+FKwBfFVzZ3xwAygbiYrGoBH1VcGUPAxf/t34FgDFmDvJut6uJ6ir4
@@ -173,7 +173,7 @@
   <data name="_tsbCopy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAACwSURBVFhH7dFBCoAgEIXhjtCZ3HuxulwL72Ft3BZBQgzp
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAACwSURBVFhH7dFBCoAgEIXhjtCZ3HuxulwL72Ft3BZBQgzp
         zNgzShr4IZLGD+q6Y0IIa0GT976PO27NxXJpGERcaIwRZa1dnXM4hBYAR1DA7JdswzBiEVoAHFECyCD0
         mFIADCEFxHMu9W9BA9QILYC+p+eJ35JGoAH7swpRA6BC1AKIETUBOcRjgL0zIt5XDcDVLoDrB3wHwEUX
         S3s/gKtdADc/gALu9l0AOnpPcuiHqDYKygxXC+/L4wAAAABJRU5ErkJggg==
@@ -182,7 +182,7 @@
   <data name="_tsbPaste.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAEWSURBVFhH7ZVBDoIwEEU5ikfwDJyCtVzMHWfABXvuoW5Y
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAEWSURBVFhH7ZVBDoIwEEU5ikfwDJyCtVzMHWfABXvuoW5Y
         WAgty5ppGKKfxpRSFNFJXkLaGf5rMTGKHKvrup2U8qiUEkop3SNojfawP2i1bbuHYERQD84FKTodhxdF
         oZMk0XEcG+iZ1lhikZvor90EcTDCEtSL885ludYn+OTpIdV5fjLQM98E9iOYNyoceKSqquG0FCxutYGe
         eR1nEMwbFTfi9SIcTlzO19E+sqgAgfuItwAGYDCCfdsTcAXnvl/Al7/AagSklPMFmroZThIKzHcSoP+E
@@ -190,4 +190,10 @@
         5wV+tu57GqrT861mkQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="_skCommunicator.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>207, 17</value>
+  </metadata>
+  <metadata name="_skMetaDataProcessor.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>422, 17</value>
+  </metadata>
 </root>
